
  * Added italian translation
  * Added Ultimate-guitar.com as lyrics source for guitar tabs
  * If the track length is not correctly read by taglib read at play time using gstreamer
  * Added Events to last.fm information panel
  * Implemented PlayList import from m3u, pls, axs, xspf playlist file formats
  * Ratings of tracks can be set clicking over the stars in tracks listboxes
    in library and playlists panel
  * Added an option to export/import user defined radio stations
    The format is a xml like this. 
	<RadioStations>
	  <RadioStation>
	    <Name>StationName0</Name>
	    <Url>StationLink</Url>
          </RadioStation>
          ...
       </RadioStations>
    This way you can do a tool to export radios from other formats and
    import them in guayadeque
  * You can select the order of the albums in the albums listbox context menu
  * You can set the ratings of tracks in playlist directly clicking in the stars
  * Control Menu show the status of the Smart or Loop mode
  * Added last.fm as cover source in the cover download dialog
  * Added a lyric editor in the track editor
  * Added option to automatically save lyrics to mp3, flac, ogg, m4a files. 
    Also you can manually save it from the lyrics panel
  * Added an option in Preferences -> Playback to remove played tracks
  * Added print and copy to clipboard of lyrics
  * Enabled option to edit tracks from the player playlist
  * When some preferences are modified the settings are propagated where its needed
  * Fixed bug in smart play mode

2010-01-15 0.2.3
  * Added Random as a ordering method for dynamic playlists
  * Added a filter for the random or smart play mode so you can select a
    playlist for the Allow filter and another playlist for the deny filter.
    This way you can for example fix the genre or a label for the Smart
    added tracks from last.fm.
  * Fix bug when searching text with a ' in it
  * Fix 'Copy to...' when filenames contains reserved chars