@@ -1,4 +1,5 @@
 
+  * Last.fm accept now drop audio files on it to show the information about the file
   * Added italian translation
   * Added Ultimate-guitar.com as lyrics source for guitar tabs
   * If the track length is not correctly read by taglib read at play time using gstreamer
